# solidfs

./: .gitignore  CMakeLists.txt  README.md  configure_vm.sh  dependency.md  log
cmake/modules/: FindFUSE.cmake  FindGLOG.cmake
fuse/: fuse.cpp
src/: common.h
src/block/: block.h  block_manager.h  freelist_blockmanager.cpp  freelist_blockmanager.h  super_block.h
src/directory/: directory.cpp  directory.h
src/fs/: file_system.cpp  file_system.h
src/fuse/: fuse.cpp
src/inode/: inode.h  inode_manager.cpp  inode_manager.h
src/storage/: file_storage.cpp  file_storage.h  memory_storage.cpp  memory_storage.h  storage.h
src/utils/: fs_exception.h  iostream_utils.h  log_utils.cpp  log_utils.h  string_utils.h
test/block/: test_freelist_bm.cpp
test/directory/: test_directory.cpp
test/fs/: test_filesystem.cpp
test/fuse/: do_test_open.c  file_operation_test.cpp  test_fuse.h  test_fuse_helper.c  test_fuse_helper.h  test_main.c  test_mkdir.c  test_mknod.c  test_readdir.c  test_rmdir_unlink.c  test_syecall.cpp  test_syscall.c  test_syscall.old  test_truncate.c  test_unlink.c  test_write.c
test/fuse/test_fuse/: test_chmod.c  test_chown_statfs.c  test_mkdir_add.c  test_read_seek.c  test_readdir.c  test_rmdir_unlink.c  test_unlink.c
test/inode/: test_inode_manager.cpp
test/storage/: test_memory_storage.cpp
