cmake_minimum_required(VERSION 3.5)
project(cs270)

if (POLICY CMP0074)
  cmake_policy(SET CMP0074 NEW)
endif ()

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")

#set(ENABLE_TEST true)
set(ENABLE_FUSE_TEST true)

# http://rpg.ifi.uzh.ch/docs/glog.html

find_package(GLOG REQUIRED)
if (DEFINED ENV{GLOG_ROOT})
  set(GLOG_ROOT $ENV{GTEST_ROOT})
endif ()
include_directories(${GLOG_INCLUDE_DIR})
set(ExtLibs ${ExtLibs} ${GLOG_LIBRARY})
message(${GLOG_INCLUDE_DIR})

if (DEFINED ENV{FUSE_ROOT})
  set(FUSE_ROOT $ENV{FUSE_ROOT})
endif ()
find_package(FUSE REQUIRED)
include_directories(${FUSE_INCLUDE_DIR})
set(ExtLibs ${ExtLibs} ${FUSE_LIBRARY})
set(CMAKE_CXX_FLAGS "-D_FILE_OFFSET_BITS=64")
  message(${FUSE_INCLUDE_DIR})

if (${ENABLE_TEST})
  if (DEFINED ENV{GTEST_ROOT})
    set(GTEST_ROOT $ENV{GTEST_ROOT})
  endif ()
  find_package(GTest)
  if (GTEST_FOUND)
    message(STATUS "Found valid GTest version:")
    message(STATUS "  GTest root dir: ${GTEST_ROOT}")
    message(STATUS "  GTest include dir: ${GTEST_INCLUDE_DIRS}")
    message(STATUS "  GTest libraries: ${GTEST_BOTH_LIBRARIES}")
  endif ()
  include_directories(${GTEST_INCLUDE_DIRS})
  set(ExtTestLibs ${ExtLibs} ${GTEST_BOTH_LIBRARIES} pthread)
endif ()

include_directories(./src)
file(GLOB_RECURSE SourceFiles src/*.cpp)
add_library(Core STATIC ${SourceFiles})

if (${ENABLE_FUSE_TEST})
file(GLOB_RECURSE FuseTestFiles test/fuse/*.c)
list(REMOVE_ITEM FuseTestFiles ${CMAKE_SOURCE_DIR}/test/fuse/test_syscall.c)
add_executable(FuseTests ${FuseTestFiles})
target_link_libraries(FuseTests ${ExtTestLibs})

if (${ENABLE_TEST})
file(GLOB_RECURSE TestFiles test/*.cpp)
#list(FILTER TestFiles EXCLUDE REGEX ".*fuse.*cpp$")
#list(REMOVE_ITEM TestFiles ${FuseTestFiles})
add_executable(CoreTests ${TestFiles})
target_link_libraries(CoreTests Core ${ExtTestLibs})
endif ()

file(GLOB_RECURSE FuseFiles fuse/*.cpp)
add_executable(solidFS ${FuseFiles})
target_link_libraries(solidFS Core ${ExtLibs})
  
file(GLOB_RECURSE SyscallTestFiles test/fuse/test_syscall.c)
add_executable(syscallTest ${SyscallTestFiles})
#target_link_libraries(FuseTests ${ExtTestLibs})
endif()
